Closed Bug 1259737 Opened 8 years ago Closed 8 years ago

BackgroundImpl.cpp:385:5: error: member initializer 'mBoundThread' does not name a non-static data member or base class

Categories

(Core :: MFBT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: Felipe, Assigned: jwatt)

References

Details

Attachments

(1 file)

mBoundThread is not defined in a non-debug RELEASE_BUILD.

> #ifdef RELEASE_BUILD
> #ifdef DEBUG
>   nsIThread* mBoundThread;
> #endif
> #else
>   nsIThread* mBoundThread;
> #endif

but used unconditionally later on:

>  ChildImpl()
>  : mBoundThread(nullptr)


This would manifest when this code is merged to beta. I haven't checked if there are further problems, this is the first one that the compilation stopped.
Attached patch fixSplinter Review
Attachment #8734748 - Attachment is patch: true
Attachment #8734748 - Flags: review?(nfroyd)
Assignee: nobody → jwatt
Attachment #8734748 - Flags: review?(nfroyd) → review+
https://hg.mozilla.org/mozilla-central/rev/9061abb46bc7
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.